src/antlr/nfmlParser.js
// Generated from nfml.g4 by ANTLR 4.12.0
// jshint ignore: start
import antlr4 from 'antlr4';
import nfmlListener from './nfmlListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class nfmlParser extends antlr4.Parser {

    static grammarFileName = "nfml.g4";
    static literalNames = [ null, null, null, "'-'", "':'", "'---'", "'{'", 
                            "'}'", "'['", "']'", "'[['", "']]'" ];
    static symbolicNames = [ null, "COMMENT", "ID_LETTER", "ID_SEPARATOR", 
                             "COLON", "MULTILINE_STRING_DELIMETER", "OBJECT_OPEN", 
                             "OBJECT_CLOSE", "LIST_OPEN", "LIST_CLOSE", 
                             "ARRAY_OPEN", "ARRAY_CLOSE", "NEWLINE", "WHITESPACE", 
                             "UNICODE_SET" ];
    static ruleNames = [ "nfml", "pair", "identifier", "value", "string", 
                         "multiline_string", "list", "array", "object" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = nfmlParser.ruleNames;
        this.literalNames = nfmlParser.literalNames;
        this.symbolicNames = nfmlParser.symbolicNames;
    }



	nfml() {
	    let localctx = new NfmlContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, nfmlParser.RULE_nfml);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 18;
	        this.object();
	        this.state = 19;
	        this.match(nfmlParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	pair() {
	    let localctx = new PairContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, nfmlParser.RULE_pair);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 21;
	        this.identifier();
	        this.state = 22;
	        this.match(nfmlParser.COLON);
	        this.state = 23;
	        this.value();
	        this.state = 25; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 24;
	            this.match(nfmlParser.NEWLINE);
	            this.state = 27; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===12);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	identifier() {
	    let localctx = new IdentifierContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, nfmlParser.RULE_identifier);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 30; 
	        this._errHandler.sync(this);
	        var _alt = 1+1;
	        do {
	        	switch (_alt) {
	        	case 1+1:
	        		this.state = 29;
	        		this.match(nfmlParser.ID_LETTER);
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 32; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,1, this._ctx);
	        } while ( _alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 42;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===3) {
	            this.state = 34;
	            this.match(nfmlParser.ID_SEPARATOR);
	            this.state = 36; 
	            this._errHandler.sync(this);
	            var _alt = 1+1;
	            do {
	            	switch (_alt) {
	            	case 1+1:
	            		this.state = 35;
	            		this.match(nfmlParser.ID_LETTER);
	            		break;
	            	default:
	            		throw new antlr4.error.NoViableAltException(this);
	            	}
	            	this.state = 38; 
	            	this._errHandler.sync(this);
	            	_alt = this._interp.adaptivePredict(this._input,2, this._ctx);
	            } while ( _alt!=1 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	            this.state = 44;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	value() {
	    let localctx = new ValueContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, nfmlParser.RULE_value);
	    try {
	        this.state = 50;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 45;
	            this.object();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 46;
	            this.string();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 47;
	            this.multiline_string();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 48;
	            this.list();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 49;
	            this.array();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	string() {
	    let localctx = new StringContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, nfmlParser.RULE_string);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 55;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 28670) !== 0)) {
	            this.state = 52;
	            _la = this._input.LA(1);
	            if(_la<=0 || _la===12) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	            this.state = 57;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	multiline_string() {
	    let localctx = new Multiline_stringContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, nfmlParser.RULE_multiline_string);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 58;
	        this.match(nfmlParser.MULTILINE_STRING_DELIMETER);
	        this.state = 60; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 59;
	        		this.match(nfmlParser.NEWLINE);
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 62; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,6, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 67; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 64;
	        		this.string();
	        		this.state = 65;
	        		this.match(nfmlParser.NEWLINE);
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 69; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,7, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 71;
	        this.match(nfmlParser.MULTILINE_STRING_DELIMETER);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	list() {
	    let localctx = new ListContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, nfmlParser.RULE_list);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 73;
	        this.match(nfmlParser.LIST_OPEN);
	        this.state = 75; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 74;
	        		this.match(nfmlParser.NEWLINE);
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 77; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,8, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	        this.state = 87;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,10,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 79;
	                this.string();
	                this.state = 81; 
	                this._errHandler.sync(this);
	                var _alt = 1;
	                do {
	                	switch (_alt) {
	                	case 1:
	                		this.state = 80;
	                		this.match(nfmlParser.NEWLINE);
	                		break;
	                	default:
	                		throw new antlr4.error.NoViableAltException(this);
	                	}
	                	this.state = 83; 
	                	this._errHandler.sync(this);
	                	_alt = this._interp.adaptivePredict(this._input,9, this._ctx);
	                } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER ); 
	            }
	            this.state = 89;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,10,this._ctx);
	        }

	        this.state = 90;
	        this.match(nfmlParser.LIST_CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	array() {
	    let localctx = new ArrayContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, nfmlParser.RULE_array);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 92;
	        this.match(nfmlParser.ARRAY_OPEN);
	        this.state = 94; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 93;
	            this.match(nfmlParser.NEWLINE);
	            this.state = 96; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===12);
	        this.state = 106;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2) {
	            this.state = 98;
	            this.object();
	            this.state = 100; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            do {
	                this.state = 99;
	                this.match(nfmlParser.NEWLINE);
	                this.state = 102; 
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            } while(_la===12);
	            this.state = 108;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 109;
	        this.match(nfmlParser.ARRAY_CLOSE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	object() {
	    let localctx = new ObjectContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, nfmlParser.RULE_object);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 111;
	        this.identifier();
	        this.state = 112;
	        this.match(nfmlParser.OBJECT_OPEN);
	        this.state = 114; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 113;
	            this.match(nfmlParser.NEWLINE);
	            this.state = 116; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while(_la===12);
	        this.state = 121;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2) {
	            this.state = 118;
	            this.pair();
	            this.state = 123;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 124;
	        this.match(nfmlParser.OBJECT_CLOSE);
	        this.state = 128;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,16,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                this.state = 125;
	                this.match(nfmlParser.NEWLINE); 
	            }
	            this.state = 130;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,16,this._ctx);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


}

nfmlParser.EOF = antlr4.Token.EOF;
nfmlParser.COMMENT = 1;
nfmlParser.ID_LETTER = 2;
nfmlParser.ID_SEPARATOR = 3;
nfmlParser.COLON = 4;
nfmlParser.MULTILINE_STRING_DELIMETER = 5;
nfmlParser.OBJECT_OPEN = 6;
nfmlParser.OBJECT_CLOSE = 7;
nfmlParser.LIST_OPEN = 8;
nfmlParser.LIST_CLOSE = 9;
nfmlParser.ARRAY_OPEN = 10;
nfmlParser.ARRAY_CLOSE = 11;
nfmlParser.NEWLINE = 12;
nfmlParser.WHITESPACE = 13;
nfmlParser.UNICODE_SET = 14;

nfmlParser.RULE_nfml = 0;
nfmlParser.RULE_pair = 1;
nfmlParser.RULE_identifier = 2;
nfmlParser.RULE_value = 3;
nfmlParser.RULE_string = 4;
nfmlParser.RULE_multiline_string = 5;
nfmlParser.RULE_list = 6;
nfmlParser.RULE_array = 7;
nfmlParser.RULE_object = 8;

class NfmlContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = nfmlParser.RULE_nfml;
    }

	object() {
	    return this.getTypedRuleContext(ObjectContext,0);
	};

	EOF() {
	    return this.getToken(nfmlParser.EOF, 0);
	};

	enterRule(listener) {
	    if(listener instanceof nfmlListener ) {
	        listener.enterNfml(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof nfmlListener ) {
	        listener.exitNfml(this);
		}
	}


}



class PairContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = nfmlParser.RULE_pair;
    }

	identifier() {
	    return this.getTypedRuleContext(IdentifierContext,0);
	};

	COLON() {
	    return this.getToken(nfmlParser.COLON, 0);
	};

	value() {
	    return this.getTypedRuleContext(ValueContext,0);
	};

	NEWLINE = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(nfmlParser.NEWLINE);
	    } else {
	        return this.getToken(nfmlParser.NEWLINE, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof nfmlListener ) {
	        listener.enterPair(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof nfmlListener ) {
	        listener.exitPair(this);
		}
	}


}



class IdentifierContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = nfmlParser.RULE_identifier;
    }

	ID_LETTER = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(nfmlParser.ID_LETTER);
	    } else {
	        return this.getToken(nfmlParser.ID_LETTER, i);
	    }
	};


	ID_SEPARATOR = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(nfmlParser.ID_SEPARATOR);
	    } else {
	        return this.getToken(nfmlParser.ID_SEPARATOR, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof nfmlListener ) {
	        listener.enterIdentifier(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof nfmlListener ) {
	        listener.exitIdentifier(this);
		}
	}


}



class ValueContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = nfmlParser.RULE_value;
    }

	object() {
	    return this.getTypedRuleContext(ObjectContext,0);
	};

	string() {
	    return this.getTypedRuleContext(StringContext,0);
	};

	multiline_string() {
	    return this.getTypedRuleContext(Multiline_stringContext,0);
	};

	list() {
	    return this.getTypedRuleContext(ListContext,0);
	};

	array() {
	    return this.getTypedRuleContext(ArrayContext,0);
	};

	enterRule(listener) {
	    if(listener instanceof nfmlListener ) {
	        listener.enterValue(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof nfmlListener ) {
	        listener.exitValue(this);
		}
	}


}



class StringContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = nfmlParser.RULE_string;
    }

	NEWLINE = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(nfmlParser.NEWLINE);
	    } else {
	        return this.getToken(nfmlParser.NEWLINE, i);
	    }
	};


	enterRule(listener) {
	    if(listener instanceof nfmlListener ) {
	        listener.enterString(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof nfmlListener ) {
	        listener.exitString(this);
		}
	}


}



class Multiline_stringContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = nfmlParser.RULE_multiline_string;
    }

	MULTILINE_STRING_DELIMETER = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(nfmlParser.MULTILINE_STRING_DELIMETER);
	    } else {
	        return this.getToken(nfmlParser.MULTILINE_STRING_DELIMETER, i);
	    }
	};


	NEWLINE = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(nfmlParser.NEWLINE);
	    } else {
	        return this.getToken(nfmlParser.NEWLINE, i);
	    }
	};


	string = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(StringContext);
	    } else {
	        return this.getTypedRuleContext(StringContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof nfmlListener ) {
	        listener.enterMultiline_string(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof nfmlListener ) {
	        listener.exitMultiline_string(this);
		}
	}


}



class ListContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = nfmlParser.RULE_list;
    }

	LIST_OPEN() {
	    return this.getToken(nfmlParser.LIST_OPEN, 0);
	};

	LIST_CLOSE() {
	    return this.getToken(nfmlParser.LIST_CLOSE, 0);
	};

	NEWLINE = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(nfmlParser.NEWLINE);
	    } else {
	        return this.getToken(nfmlParser.NEWLINE, i);
	    }
	};


	string = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(StringContext);
	    } else {
	        return this.getTypedRuleContext(StringContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof nfmlListener ) {
	        listener.enterList(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof nfmlListener ) {
	        listener.exitList(this);
		}
	}


}



class ArrayContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = nfmlParser.RULE_array;
    }

	ARRAY_OPEN() {
	    return this.getToken(nfmlParser.ARRAY_OPEN, 0);
	};

	ARRAY_CLOSE() {
	    return this.getToken(nfmlParser.ARRAY_CLOSE, 0);
	};

	NEWLINE = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(nfmlParser.NEWLINE);
	    } else {
	        return this.getToken(nfmlParser.NEWLINE, i);
	    }
	};


	object = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(ObjectContext);
	    } else {
	        return this.getTypedRuleContext(ObjectContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof nfmlListener ) {
	        listener.enterArray(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof nfmlListener ) {
	        listener.exitArray(this);
		}
	}


}



class ObjectContext extends antlr4.ParserRuleContext {

    constructor(parser, parent, invokingState) {
        if(parent===undefined) {
            parent = null;
        }
        if(invokingState===undefined || invokingState===null) {
            invokingState = -1;
        }
        super(parent, invokingState);
        this.parser = parser;
        this.ruleIndex = nfmlParser.RULE_object;
    }

	identifier() {
	    return this.getTypedRuleContext(IdentifierContext,0);
	};

	OBJECT_OPEN() {
	    return this.getToken(nfmlParser.OBJECT_OPEN, 0);
	};

	OBJECT_CLOSE() {
	    return this.getToken(nfmlParser.OBJECT_CLOSE, 0);
	};

	NEWLINE = function(i) {
		if(i===undefined) {
			i = null;
		}
	    if(i===null) {
	        return this.getTokens(nfmlParser.NEWLINE);
	    } else {
	        return this.getToken(nfmlParser.NEWLINE, i);
	    }
	};


	pair = function(i) {
	    if(i===undefined) {
	        i = null;
	    }
	    if(i===null) {
	        return this.getTypedRuleContexts(PairContext);
	    } else {
	        return this.getTypedRuleContext(PairContext,i);
	    }
	};

	enterRule(listener) {
	    if(listener instanceof nfmlListener ) {
	        listener.enterObject(this);
		}
	}

	exitRule(listener) {
	    if(listener instanceof nfmlListener ) {
	        listener.exitObject(this);
		}
	}


}




nfmlParser.NfmlContext = NfmlContext; 
nfmlParser.PairContext = PairContext; 
nfmlParser.IdentifierContext = IdentifierContext; 
nfmlParser.ValueContext = ValueContext; 
nfmlParser.StringContext = StringContext; 
nfmlParser.Multiline_stringContext = Multiline_stringContext; 
nfmlParser.ListContext = ListContext; 
nfmlParser.ArrayContext = ArrayContext; 
nfmlParser.ObjectContext = ObjectContext; 
